# cc-py3-pkg

./: CHANGELOG.rst  README.rst  Vagrantfile  cookiecutter.json  tasks.py
hooks/: post_gen_project.py  pre_gen_project.py
project.d/: requirements-dev.txt  requirements-py3.txt
{{cookiecutter.github_slug}}/: .bumpversion.cfg  pyproject.toml  tasks.py
{{cookiecutter.github_slug}}/project.d/: requirements-py3.txt
{{cookiecutter.github_slug}}/tests/: test_{{cookiecutter.solution_slug}}.py
{{cookiecutter.github_slug}}/{{cookiecutter.solution_slug}}/: __init__.py  cli.py
{{cookiecutter.repo_slug}}/: tasks.py
{{cookiecutter.solution_slug}}/: CHANGELOG.rst  README.rst  Vagrantfile  pyproject.toml  tasks.py
{{cookiecutter.solution_slug}}/project.d/: requirements-dev.txt
{{cookiecutter.solution_slug}}/tests/: __init__.py  test_{{cookiecutter.solution_slug}}.py
{{cookiecutter.solution_slug}}/{{cookiecutter.solution_slug}}/: __init__.py  cli.py
